--- a/redux_hooks_todo_app/package.json
+++ b/redux_hooks_todo_app/package.json
@@ -19,7 +19,8 @@
     "react-router-dom": "^6.3.0",
     "react-toastify": "^8.2.0",
     "redux": "^4.1.2",
-    "redux-thunk": "^2.4.1"
+    "redux-thunk": "^2.4.1",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@types/react": "^18.0.0",
